--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "p0wa-wallet",
-	"version": "0.0.1",
+	"version": "1.0.0-alpha",
+	"engines": {
+		"node": "16"
+	},
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -19,6 +22,7 @@
 		"@sveltejs/kit": "^1.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@vite-pwa/sveltekit": "^0.1.2",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -29,6 +33,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
+		"vite-plugin-pwa": "^0.14.1",
 		"vitest": "^0.25.3"
 	},
 	"type": "module"
