--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vite-plugin-pwa": "^0.14.1",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.3",
+		"workbox-window": "^6.5.4"
 	},
 	"type": "module"
 }
