--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "p0wa-wallet",
 	"version": "1.0.0-alpha",
 	"engines": {
-		"node": "16"
+		"node": "18"
 	},
 	"private": true,
 	"scripts": {
@@ -12,11 +12,15 @@
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
+		"test:unit": "vitest run",
+		"coverage": "vitest run --coverage",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "pretty-quick --staged",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
+		"@types/node": "^18.11.18",
+		"@types/jest": "^29.2.6",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
@@ -28,10 +32,12 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"husky": "^8.0.3",
 		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"pretty-quick": "^3.1.3",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^4.10.7",
