--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
 		"prepare": "husky install"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"@types/jest": "^29.2.6",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/jest": "^29.2.6",
+		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@vite-pwa/sveltekit": "^0.1.2",
@@ -49,5 +49,12 @@
 		"vitest": "^0.25.3",
 		"workbox-window": "^6.5.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@signumjs/core": "1.0.0-rc.55",
+		"@signumjs/crypto": "1.0.0-rc.55",
+		"@signumjs/util": "1.0.0-rc.55",
+		"buffer": "^6.0.3",
+		"dexie": "^3.2.3"
+	}
 }
