--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@vite-pwa/sveltekit": "^0.1.2",
+		"@vitest/coverage-c8": "^0.28.1",
 		"autoprefixer": "^10.4.7",
 		"daisyui": "^2.47.0",
 		"eslint": "^8.28.0",
