--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/jest": "^29.2.6",
+		"@types/lodash.debounce": "^4.0.7",
 		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -56,6 +57,7 @@
 		"@signumjs/crypto": "1.0.0-rc.55",
 		"@signumjs/util": "1.0.0-rc.55",
 		"buffer": "^6.0.3",
-		"dexie": "^3.2.3"
+		"dexie": "^3.2.3",
+		"lodash.debounce": "^4.0.8"
 	}
 }
